# qr-encoder-demo

./: .gitignore  Cargo.toml  README.md  main.css  main.htm  main.tis
src/: qr.rs
