[package]
name = "qr"
version = "0.1.0"
authors = ["GirkovArpa <girkovarpa@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcode-generator = "4.0.4"
sciter-rs = { version = "*", features = ["extension"] }

[lib]
path = "src/qr.rs"
crate-type = ["cdylib"]
test = false
bench = false